cluster/apps/mediaserver/transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/version: 5.3.2
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/version: 5.3.2
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      containers:
      - image: haugene/transmission-openvpn:5.3.2
        name: transmission-openvpn
        ports:
        - containerPort: 9091
          name: trans-web-ui
        volumeMounts:
        - mountPath: /data
          name: media-volume
        - mountPath: /etc/openvpn/custom/
          name: trans-vpn-vpc-volume
        - mountPath: /config
          name: trans-config-volume
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
      - command:
        - /bin/sh
        - -c
        - sh /scripts/ipleak.sh
        image: curlimages/curl:8.17.0
        name: ipleak
        volumeMounts:
        - mountPath: /scripts/
          name: ip-leak-volume
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/transmission-exporter:a1d8e40@sha256:1480b0e900f241fc4d2c95fcda9e2dc0a49e97ca6de4fefdebe3daf3aa8a6e05
        name: transmission-exporter
        ports:
        - containerPort: 19091
          name: trans-metrics
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
      volumes:
      - name: trans-config-volume
        persistentVolumeClaim:
          claimName: trans-config-pvc
      - name: trans-vpn-vpc-volume
        persistentVolumeClaim:
          claimName: trans-vpn-pvc
      - name: media-volume
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: ip-leak-volume
        configMap:
          name: discord-bridge-configmap
          items:
          - key: ipleak.sh
            path: ipleak.sh
      - name: trans-vpn-volume
        secret:
          secretName: trans-config
          items:
          - key: vpn-config
            path: node-nl.protonvpn.udp.ovpn
          - key: rotate-script
            path: update-port.sh
