cluster/apps/mediaserver/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/version: 5.3.2
  name: transmission
spec:
  selector:
    app.kubernetes.io/name: transmission
  ports:
  - name: http-trans-webui
    port: 9091
    targetPort: 9091
