cluster/apps/mediaserver/transmission/metrics-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: transmission-metrics-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transmission
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 19091
      protocol: TCP
